--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
     <string name="bem_vindo">Olá, meu nome é %s!</string>
     <string name="descricao">Treinando tradução para outras linguas.</string>
     <string-array name="language_list">
+        <item>Padrão</item>
         <item>Portugês Br</item>
         <item>Inglês</item>
         <item>Italiano</item>
         <item>Espanhol</item>
-        <item>Chinês</item>
     </string-array>
 </resources>
