traduzido opções restantes com excecao dos itens no spinner

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="bem_vindo">Hello, my name is %s!</string>
     <string name="descricao">Training translatin to other languages</string>
+    <string name="configuration">Change language</string>
+    <string name="language_selector">Select a language</string>
 </resources>
